tests/integration/errors/test_struct_missing_required.sn
# Error test: struct literal missing required fields

struct Point =>
    x: double
    y: double

fn main(): void =>
    var p: Point = Point {}
    print("Should not compile\n")
